# tgbotbuilder

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker_build_and_push.yml  python_lint.yml  python_test.yml
botbuilder/: app.py  blocks.yml  template.py  utils.py
botbuilder/rendered/: bot.py
botbuilder/templates/: bot_template.py.j2
