[project]
name = "Bot-Builder"
version = "0.0.1"
authors = [
  { name="Nikita Guliaev", email="nik9516@gmail.com" },
]
description = "Telegram bot builder"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["botbuilder*"]

[tool.setuptools.package-data]
"*" = ["*.yml"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/nickyfoster/botbuilder"
"Bug Tracker" = "https://github.com/nickyfoster/botbuilder/issues"
